<resources>
    <string name="app_name">Player Picker 2K25</string>
    <string name="Random1">Randomize</string>
    <string name="select_the_range_of_teams">Select the range of Teams</string>
    <string name="select_game_mode">Select game mode</string>
    <string name="first_team">First team:</string>
    <string name="second_team">Second team:</string>
    <string name="go_back">Go back</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="match_history">Match History</string>
    <string name="accept_match">Accept Match</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="favorites">Favorites</string>
    <string name="delete_from_history">Delete from history</string>
    <string name="create_account"> Create account </string>
    <string name="full_name">Full name</string>
    <string name="return1">Return</string>
    <string name="sign_out">Sign Out</string>
    <string name="exit_retry">Press back again to exit</string>
</resources>